Implement `poisson_log_loss()` (#230)
* poisson dist metrics for #146 and #11

* remove deviance metric

* redocument with CRAN rlang

* update pkgdown topics

* Update NEWS.md

* Move test objects inside `test_that()` block

* numeric -> integer

Co-authored-by: Davis Vaughan <davis@rstudio.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ S3method(msd,data.frame)
 S3method(npv,data.frame)
 S3method(npv,matrix)
 S3method(npv,table)
+S3method(poisson_log_loss,data.frame)
 S3method(ppv,data.frame)
 S3method(ppv,matrix)
 S3method(ppv,table)
@@ -133,6 +134,8 @@ export(new_numeric_metric)
 export(new_prob_metric)
 export(npv)
 export(npv_vec)
+export(poisson_log_loss)
+export(poisson_log_loss_vec)
 export(ppv)
 export(ppv_vec)
 export(pr_auc)
@@ -195,6 +198,7 @@ importFrom(rlang,set_expr)
 importFrom(stats,IQR)
 importFrom(stats,complete.cases)
 importFrom(stats,cor)
+importFrom(stats,dpois)
 importFrom(stats,model.matrix)
 importFrom(stats,relevel)
 importFrom(stats,sd)
