--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,20 +2,14 @@ Type: Package
 Package: yardstick
 Title: Tidy Characterizations of Model Performance
 Version: 0.0.8.9000
-Authors@R: 
-    c(person(given = "Max",
-             family = "Kuhn",
-             role = "aut",
-             email = "max@rstudio.com"),
-      person(given = "Davis",
-             family = "Vaughan",
-             role = c("aut", "cre"),
-             email = "davis@rstudio.com"),
-      person(given = "RStudio",
-             role = "cph"))
-Description: Tidy tools for quantifying how well model fits to a
-    data set such as confusion matrices, class probability curve
-    summaries, and regression metrics (e.g., RMSE).
+Authors@R: c(
+    person("Max", "Kuhn", , "max@rstudio.com", role = "aut"),
+    person("Davis", "Vaughan", , "davis@rstudio.com", role = c("aut", "cre")),
+    person("RStudio", role = "cph")
+  )
+Description: Tidy tools for quantifying how well model fits to a data set
+    such as confusion matrices, class probability curve summaries, and
+    regression metrics (e.g., RMSE).
 License: MIT + file LICENSE
 URL: https://github.com/tidymodels/yardstick,
     https://yardstick.tidymodels.org
@@ -42,6 +36,8 @@ Suggests:
     tidyr
 VignetteBuilder: 
     knitr
+Config/Needs/website: 
+    tidyverse/tidytemplate
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
