Give `sensitivity()` its own metric implementation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,9 @@ S3method(rsq_trad,data.frame)
 S3method(sens,data.frame)
 S3method(sens,matrix)
 S3method(sens,table)
+S3method(sensitivity,data.frame)
+S3method(sensitivity,matrix)
+S3method(sensitivity,table)
 S3method(smape,data.frame)
 S3method(spec,data.frame)
 S3method(spec,matrix)
