Give `specificity()` its own metric implementation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,9 @@ S3method(smape,data.frame)
 S3method(spec,data.frame)
 S3method(spec,matrix)
 S3method(spec,table)
+S3method(specificity,data.frame)
+S3method(specificity,matrix)
+S3method(specificity,table)
 S3method(summary,conf_mat)
 S3method(tidy,conf_mat)
 export(accuracy)
