Fix `sens()` and `spec()` aliases (#242)
* Give `sensitivity()` its own metric implementation

* Give `specificity()` its own metric implementation

* NEWS bullet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,10 +71,16 @@ S3method(rsq_trad,data.frame)
 S3method(sens,data.frame)
 S3method(sens,matrix)
 S3method(sens,table)
+S3method(sensitivity,data.frame)
+S3method(sensitivity,matrix)
+S3method(sensitivity,table)
 S3method(smape,data.frame)
 S3method(spec,data.frame)
 S3method(spec,matrix)
 S3method(spec,table)
+S3method(specificity,data.frame)
+S3method(specificity,matrix)
+S3method(specificity,table)
 S3method(summary,conf_mat)
 S3method(tidy,conf_mat)
 export(accuracy)
