add extract_plot_data function and slight improvement to autoplot cm mosiac

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(conf_mat,table)
 S3method(detection_prevalence,data.frame)
 S3method(detection_prevalence,matrix)
 S3method(detection_prevalence,table)
+S3method(extract_plot_data,conf_mat)
 S3method(f_meas,data.frame)
 S3method(f_meas,matrix)
 S3method(f_meas,table)
@@ -97,6 +98,7 @@ export(conf_mat)
 export(detection_prevalence)
 export(detection_prevalence_vec)
 export(dots_to_estimate)
+export(extract_plot_data)
 export(f_meas)
 export(f_meas_vec)
 export(finalize_estimator)
