--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,13 +17,13 @@ BugReports: https://github.com/tidymodels/yardstick/issues
 Depends:
     R (>= 2.10)
 Imports:
-    dplyr (>= 1.0.0),
+    dplyr (>= 1.0.8),
     generics,
     pROC (>= 1.15.0),
-    rlang (>= 0.4.2),
-    tidyselect,
+    rlang (>= 1.0.1),
+    tidyselect (>= 1.1.2),
     utils,
-    vctrs (>= 0.3.6)
+    vctrs (>= 0.3.8)
 Suggests: 
     covr,
     crayon,
