Remove custom metrics vignette in favor of the tidymodels.org article
Closes #236

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,6 +12,14 @@ template:
 development:
   mode: auto
 
+navbar:
+  components:
+    tutorials:
+      text: Learn more
+      menu:
+      - text: "Custom performance metrics"
+        href: https://www.tidymodels.org/learn/develop/metrics/
+
 reference:
   - title: Classification Metrics
     contents:
