Use `check_dots_empty()` from rlang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -192,6 +192,7 @@ importFrom(pROC,roc)
 importFrom(rlang,abort)
 importFrom(rlang,call2)
 importFrom(rlang,caller_env)
+importFrom(rlang,check_dots_empty)
 importFrom(rlang,enquo)
 importFrom(rlang,enquos)
 importFrom(rlang,eval_tidy)
