Minimize and centralize our function imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,36 +180,8 @@ export(specificity)
 export(specificity_vec)
 export(tidy)
 export(validate_estimator)
+import(rlang)
 importFrom(dplyr,"%>%")
-importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
-importFrom(dplyr,bind_rows)
-importFrom(dplyr,summarise)
 importFrom(generics,tidy)
-importFrom(pROC,auc)
-importFrom(pROC,coords)
-importFrom(pROC,roc)
-importFrom(rlang,abort)
-importFrom(rlang,call2)
-importFrom(rlang,caller_env)
-importFrom(rlang,check_dots_empty)
-importFrom(rlang,enquo)
-importFrom(rlang,enquos)
-importFrom(rlang,eval_tidy)
-importFrom(rlang,exec)
-importFrom(rlang,get_expr)
-importFrom(rlang,is_function)
-importFrom(rlang,quo)
-importFrom(rlang,quos)
-importFrom(rlang,set_expr)
-importFrom(stats,IQR)
-importFrom(stats,complete.cases)
-importFrom(stats,cor)
-importFrom(stats,dpois)
-importFrom(stats,model.matrix)
-importFrom(stats,relevel)
-importFrom(stats,sd)
-importFrom(stats,var)
-importFrom(stats,weighted.mean)
-importFrom(utils,globalVariables)
 useDynLib(yardstick, .registration = TRUE)
