--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ export(specificity_vec)
 export(tidy)
 export(validate_estimator)
 import(rlang)
+import(vctrs)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,as_tibble)
 importFrom(generics,tidy)
