Import `utils::globalVariables()` to avoid an R CMD check NOTE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -185,4 +185,5 @@ import(vctrs)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,as_tibble)
 importFrom(generics,tidy)
+importFrom(utils,globalVariables)
 useDynLib(yardstick, .registration = TRUE)
