document metric_summarizer_class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ export(mcc)
 export(mcc_vec)
 export(metric_set)
 export(metric_summarizer)
+export(metric_summarizer_class)
 export(metric_summarizer_numeric)
 export(metric_tweak)
 export(metric_vec_template)
