--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ export(metric_set)
 export(metric_summarizer)
 export(metric_summarizer_class)
 export(metric_summarizer_numeric)
+export(metric_summarizer_prob)
 export(metric_tweak)
 export(metric_vec_template)
 export(metrics)
