--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -85,7 +85,9 @@ reference:
 
   - title: Development Functions
     contents:
-    - metric_summarizer
+    - metric_summarizer_class
+    - metric_summarizer_numeric
+    - metric_summarizer_prob
     - metric_vec_template
     - get_weights
     - new-metric
