rename metric functions to type_metric_summarizer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(bal_accuracy)
 export(bal_accuracy_vec)
 export(ccc)
 export(ccc_vec)
+export(class_metric_summarizer)
 export(classification_cost)
 export(classification_cost_vec)
 export(conf_mat)
@@ -126,9 +127,6 @@ export(mcc)
 export(mcc_vec)
 export(metric_set)
 export(metric_summarizer)
-export(metric_summarizer_class)
-export(metric_summarizer_numeric)
-export(metric_summarizer_prob)
 export(metric_tweak)
 export(metric_vec_template)
 export(metrics)
@@ -143,6 +141,7 @@ export(new_numeric_metric)
 export(new_prob_metric)
 export(npv)
 export(npv_vec)
+export(numeric_metric_summarizer)
 export(poisson_log_loss)
 export(poisson_log_loss_vec)
 export(ppv)
@@ -152,6 +151,7 @@ export(pr_auc_vec)
 export(pr_curve)
 export(precision)
 export(precision_vec)
+export(prob_metric_summarizer)
 export(recall)
 export(recall_vec)
 export(rmse)
