--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -85,9 +85,9 @@ reference:
 
   - title: Development Functions
     contents:
-    - metric_summarizer_class
-    - metric_summarizer_numeric
-    - metric_summarizer_prob
+    - class_metric_summarizer
+    - numeric_metric_summarizer
+    - prob_metric_summarizer
     - metric_vec_template
     - get_weights
     - new-metric
