--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(average_precision,data.frame)
 S3method(bal_accuracy,data.frame)
 S3method(bal_accuracy,matrix)
 S3method(bal_accuracy,table)
+S3method(brier_class,data.frame)
 S3method(ccc,data.frame)
 S3method(classification_cost,data.frame)
 S3method(conf_mat,data.frame)
@@ -89,6 +90,8 @@ export(average_precision)
 export(average_precision_vec)
 export(bal_accuracy)
 export(bal_accuracy_vec)
+export(brier_class)
+export(brier_class_vec)
 export(ccc)
 export(ccc_vec)
 export(classification_cost)
