--- a/NAMESPACE
+++ b/NAMESPACE
@@ -188,5 +188,6 @@ import(vctrs)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,as_tibble)
 importFrom(generics,tidy)
+importFrom(stats,complete.cases)
 importFrom(utils,globalVariables)
 useDynLib(yardstick, .registration = TRUE)
