document new metric_vec_template functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ export(bal_accuracy_vec)
 export(ccc)
 export(ccc_vec)
 export(class_metric_summarizer)
+export(class_metric_vec_template)
 export(classification_cost)
 export(classification_cost_vec)
 export(conf_mat)
@@ -142,6 +143,7 @@ export(new_prob_metric)
 export(npv)
 export(npv_vec)
 export(numeric_metric_summarizer)
+export(numeric_metric_vec_template)
 export(poisson_log_loss)
 export(poisson_log_loss_vec)
 export(ppv)
@@ -152,6 +154,7 @@ export(pr_curve)
 export(precision)
 export(precision_vec)
 export(prob_metric_summarizer)
+export(prob_metric_vec_template)
 export(recall)
 export(recall_vec)
 export(rmse)
