--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -88,7 +88,9 @@ reference:
     - class_metric_summarizer
     - numeric_metric_summarizer
     - prob_metric_summarizer
-    - metric_vec_template
+    - class_metric_vec_template
+    - numeric_metric_vec_template
+    - prob_metric_vec_template
     - get_weights
     - new-metric
 
