--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(bal_accuracy)
 export(bal_accuracy_vec)
 export(ccc)
 export(ccc_vec)
+export(check_numeric_metric)
 export(class_metric_summarizer)
 export(class_metric_vec_template)
 export(classification_cost)
