--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(ccc)
 export(ccc_vec)
 export(check_class_metric)
 export(check_numeric_metric)
+export(check_prob_metric)
 export(class_metric_summarizer)
 export(class_metric_vec_template)
 export(classification_cost)
