add handle_missings() functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ export(class_metric_vec_template)
 export(classification_cost)
 export(classification_cost_vec)
 export(conf_mat)
+export(detect_missings)
 export(detection_prevalence)
 export(detection_prevalence_vec)
 export(dots_to_estimate)
@@ -110,6 +111,7 @@ export(gain_capture)
 export(gain_capture_vec)
 export(gain_curve)
 export(get_weights)
+export(handle_missings)
 export(huber_loss)
 export(huber_loss_pseudo)
 export(huber_loss_pseudo_vec)
