export validate functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,7 +187,12 @@ export(spec_vec)
 export(specificity)
 export(specificity_vec)
 export(tidy)
+export(validate_binary_estimator)
+export(validate_case_weights)
 export(validate_estimator)
+export(validate_factor_truth_factor_estimate)
+export(validate_factor_truth_matrix_estimate)
+export(validate_numeric_truth_numeric_estimate)
 import(rlang)
 import(vctrs)
 importFrom(dplyr,"%>%")
