rename handle_missings -> yardstick_remove_missing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,7 +110,6 @@ export(gain_capture)
 export(gain_capture_vec)
 export(gain_curve)
 export(get_weights)
-export(handle_missings)
 export(huber_loss)
 export(huber_loss_pseudo)
 export(huber_loss_pseudo_vec)
@@ -193,6 +192,7 @@ export(validate_estimator)
 export(validate_factor_truth_factor_estimate)
 export(validate_factor_truth_matrix_estimate)
 export(validate_numeric_truth_numeric_estimate)
+export(yardstick_remove_missing)
 import(rlang)
 import(vctrs)
 importFrom(dplyr,"%>%")
