rename detect_missings -> yardstick_any_missing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,7 +98,6 @@ export(class_metric_summarizer)
 export(classification_cost)
 export(classification_cost_vec)
 export(conf_mat)
-export(detect_missings)
 export(detection_prevalence)
 export(detection_prevalence_vec)
 export(dots_to_estimate)
@@ -192,6 +191,7 @@ export(validate_estimator)
 export(validate_factor_truth_factor_estimate)
 export(validate_factor_truth_matrix_estimate)
 export(validate_numeric_truth_numeric_estimate)
+export(yardstick_any_missing)
 export(yardstick_remove_missing)
 import(rlang)
 import(vctrs)
