use lifecycle badges

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -193,5 +193,6 @@ import(vctrs)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,as_tibble)
 importFrom(generics,tidy)
+importFrom(lifecycle,deprecated)
 importFrom(utils,globalVariables)
 useDynLib(yardstick, .registration = TRUE)
