--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Depends:
 Imports:
     dplyr (>= 1.0.9),
     generics (>= 0.1.2),
-    hardhat (>= 1.0.0),
+    hardhat (>= 1.2.0.9000),
     lifecycle (>= 1.0.3),
     rlang (>= 1.0.6),
     tidyselect (>= 1.2.0),
@@ -45,3 +45,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
+Remotes:  
+    tidymodels/hardhat
