--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ export(msd_vec)
 export(new_class_metric)
 export(new_numeric_metric)
 export(new_prob_metric)
+export(new_surv_metric)
 export(npv)
 export(npv_vec)
 export(numeric_metric_summarizer)
