--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(bal_accuracy,data.frame)
 S3method(bal_accuracy,matrix)
 S3method(bal_accuracy,table)
 S3method(brier_class,data.frame)
+S3method(brier_surv,data.frame)
 S3method(ccc,data.frame)
 S3method(classification_cost,data.frame)
 S3method(conf_mat,data.frame)
@@ -92,6 +93,8 @@ export(bal_accuracy)
 export(bal_accuracy_vec)
 export(brier_class)
 export(brier_class_vec)
+export(brier_surv)
+export(brier_surv_vec)
 export(ccc)
 export(ccc_vec)
 export(check_class_metric)
@@ -188,6 +191,7 @@ export(spec)
 export(spec_vec)
 export(specificity)
 export(specificity_vec)
+export(surv_dynamic_metric_summarizer)
 export(tidy)
 export(validate_estimator)
 export(yardstick_any_missing)
