add validation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ export(ccc_vec)
 export(check_class_metric)
 export(check_numeric_metric)
 export(check_prob_metric)
+export(check_surv_dynamic_metric)
 export(class_metric_summarizer)
 export(classification_cost)
 export(classification_cost_vec)
