add initial rendition of concordance index

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(brier_class,data.frame)
 S3method(brier_survival,data.frame)
 S3method(ccc,data.frame)
 S3method(classification_cost,data.frame)
+S3method(concordance_survival,data.frame)
 S3method(conf_mat,data.frame)
 S3method(conf_mat,grouped_df)
 S3method(conf_mat,matrix)
@@ -101,9 +102,12 @@ export(check_class_metric)
 export(check_numeric_metric)
 export(check_prob_metric)
 export(check_survival_dynamic_metric)
+export(check_survival_static_metric)
 export(class_metric_summarizer)
 export(classification_cost)
 export(classification_cost_vec)
+export(concordance_survival)
+export(concordance_survival_vec)
 export(conf_mat)
 export(detection_prevalence)
 export(detection_prevalence_vec)
@@ -194,6 +198,7 @@ export(spec)
 export(spec_vec)
 export(specificity)
 export(specificity_vec)
+export(static_survival_metric_summarizer)
 export(tidy)
 export(validate_estimator)
 export(yardstick_any_missing)
