add almost complete integrated brier score

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(gain_curve,data.frame)
 S3method(huber_loss,data.frame)
 S3method(huber_loss_pseudo,data.frame)
 S3method(iic,data.frame)
+S3method(integrated_brier_survival,data.frame)
 S3method(j_index,data.frame)
 S3method(j_index,matrix)
 S3method(j_index,table)
@@ -127,6 +128,8 @@ export(huber_loss_pseudo_vec)
 export(huber_loss_vec)
 export(iic)
 export(iic_vec)
+export(integrated_brier_survival)
+export(integrated_brier_survival_vec)
 export(j_index)
 export(j_index_vec)
 export(kap)
