--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(class_metric_summarizer)
 export(classification_cost)
 export(classification_cost_vec)
 export(conf_mat)
+export(curve_metric_summarizer)
 export(detection_prevalence)
 export(detection_prevalence_vec)
 export(dots_to_estimate)
