--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(brier_class_vec)
 export(ccc)
 export(ccc_vec)
 export(check_class_metric)
+export(check_dynamic_survival_metric)
 export(check_numeric_metric)
 export(check_prob_metric)
 export(class_metric_summarizer)
