--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ export(classification_cost_vec)
 export(concordance_survival)
 export(concordance_survival_vec)
 export(conf_mat)
+export(curve_metric_summarizer)
 export(detection_prevalence)
 export(detection_prevalence_vec)
 export(dots_to_estimate)
