--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ export(curve_metric_summarizer)
 export(detection_prevalence)
 export(detection_prevalence_vec)
 export(dots_to_estimate)
+export(dynamic_survival_metric_summarizer)
 export(f_meas)
 export(f_meas_vec)
 export(finalize_estimator)
