--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,7 @@ export(mpe_vec)
 export(msd)
 export(msd_vec)
 export(new_class_metric)
+export(new_dynamic_survival_metric)
 export(new_numeric_metric)
 export(new_prob_metric)
 export(npv)
