--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ export(classification_cost)
 export(classification_cost_vec)
 export(conf_mat)
 export(curve_metric_summarizer)
+export(curve_survival_metric_summarizer)
 export(detection_prevalence)
 export(detection_prevalence_vec)
 export(dots_to_estimate)
