--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ S3method(roc_auc,data.frame)
 S3method(roc_aunp,data.frame)
 S3method(roc_aunu,data.frame)
 S3method(roc_curve,data.frame)
+S3method(roc_survival_curve,data.frame)
 S3method(rpd,data.frame)
 S3method(rpiq,data.frame)
 S3method(rsq,data.frame)
@@ -174,6 +175,7 @@ export(roc_aunp_vec)
 export(roc_aunu)
 export(roc_aunu_vec)
 export(roc_curve)
+export(roc_survival_curve)
 export(rpd)
 export(rpd_vec)
 export(rpiq)
