roc_survival_curve -> roc_curve_survival

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,7 @@ S3method(roc_auc,data.frame)
 S3method(roc_aunp,data.frame)
 S3method(roc_aunu,data.frame)
 S3method(roc_curve,data.frame)
-S3method(roc_survival_curve,data.frame)
+S3method(roc_curve_survival,data.frame)
 S3method(rpd,data.frame)
 S3method(rpiq,data.frame)
 S3method(rsq,data.frame)
@@ -178,7 +178,7 @@ export(roc_aunp_vec)
 export(roc_aunu)
 export(roc_aunu_vec)
 export(roc_curve)
-export(roc_survival_curve)
+export(roc_curve_survival)
 export(rpd)
 export(rpd_vec)
 export(rpiq)
