--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,6 +153,7 @@ export(new_class_metric)
 export(new_dynamic_survival_metric)
 export(new_numeric_metric)
 export(new_prob_metric)
+export(new_static_survival_metric)
 export(npv)
 export(npv_vec)
 export(numeric_metric_summarizer)
