--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(check_class_metric)
 export(check_dynamic_survival_metric)
 export(check_numeric_metric)
 export(check_prob_metric)
+export(check_static_survival_metric)
 export(class_metric_summarizer)
 export(classification_cost)
 export(classification_cost_vec)
