--- a/NAMESPACE
+++ b/NAMESPACE
@@ -197,6 +197,7 @@ export(spec)
 export(spec_vec)
 export(specificity)
 export(specificity_vec)
+export(static_survival_metric_summarizer)
 export(tidy)
 export(validate_estimator)
 export(yardstick_any_missing)
