--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -72,6 +72,10 @@ reference:
     contents:
     - brier_survival
 
+  - title: Static Survival Metrics
+    contents:
+    - concordance_survival
+
   - title: Curve Functions
     contents:
     - roc_curve
