add brier_survival_integrated to pkgdown

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -71,6 +71,7 @@ reference:
   - title: Dynamic Survival Metrics
     contents:
     - brier_survival
+    - brier_survival_integrated
 
   - title: Curve Functions
     contents:
