--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ S3method(roc_aunp,data.frame)
 S3method(roc_aunu,data.frame)
 S3method(roc_curve,data.frame)
 S3method(roc_curve_survival,data.frame)
+S3method(roc_survival_auc,data.frame)
 S3method(rpd,data.frame)
 S3method(rpiq,data.frame)
 S3method(rsq,data.frame)
@@ -181,6 +182,8 @@ export(roc_aunu)
 export(roc_aunu_vec)
 export(roc_curve)
 export(roc_curve_survival)
+export(roc_survival_auc)
+export(roc_survival_auc_vec)
 export(rpd)
 export(rpd_vec)
 export(rpiq)
