add roc_survival_auc to pkgdown

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -71,6 +71,7 @@ reference:
   - title: Dynamic Survival Metrics
     contents:
     - brier_survival
+    - roc_survival_auc
 
   - title: Curve Survival Functions
     contents:
