rename roc_survival_auc to roc_auc_survival for consistency

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -71,7 +71,7 @@ reference:
   - title: Dynamic Survival Metrics
     contents:
     - brier_survival
-    - roc_survival_auc
+    - roc_auc_survival
 
   - title: Curve Survival Functions
     contents:
