--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,11 +63,11 @@ S3method(recall,matrix)
 S3method(recall,table)
 S3method(rmse,data.frame)
 S3method(roc_auc,data.frame)
+S3method(roc_auc_survival,data.frame)
 S3method(roc_aunp,data.frame)
 S3method(roc_aunu,data.frame)
 S3method(roc_curve,data.frame)
 S3method(roc_curve_survival,data.frame)
-S3method(roc_survival_auc,data.frame)
 S3method(rpd,data.frame)
 S3method(rpiq,data.frame)
 S3method(rsq,data.frame)
@@ -175,6 +175,8 @@ export(recall_vec)
 export(rmse)
 export(rmse_vec)
 export(roc_auc)
+export(roc_auc_survival)
+export(roc_auc_survival_vec)
 export(roc_auc_vec)
 export(roc_aunp)
 export(roc_aunp_vec)
@@ -182,8 +184,6 @@ export(roc_aunu)
 export(roc_aunu_vec)
 export(roc_curve)
 export(roc_curve_survival)
-export(roc_survival_auc)
-export(roc_survival_auc_vec)
 export(rpd)
 export(rpd_vec)
 export(rpiq)
