--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,6 +160,7 @@ export(msd)
 export(msd_vec)
 export(new_class_metric)
 export(new_dynamic_survival_metric)
+export(new_integrated_survival_metric)
 export(new_numeric_metric)
 export(new_prob_metric)
 export(new_static_survival_metric)
