--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     hardhat (>= 1.2.0.9000),
     lifecycle (>= 1.0.3),
     rlang (>= 1.0.6),
+    tibble,
     tidyselect (>= 1.2.0),
     utils,
     vctrs (>= 0.5.0)
