export finalize_estimator_internal
Found on Debian incoming CRAN check with text "Apparent methods for exported generics not registered:"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,20 @@ S3method(detection_prevalence,table)
 S3method(f_meas,data.frame)
 S3method(f_meas,matrix)
 S3method(f_meas,table)
+S3method(finalize_estimator_internal,accuracy)
+S3method(finalize_estimator_internal,brier_class)
+S3method(finalize_estimator_internal,classification_cost)
+S3method(finalize_estimator_internal,default)
+S3method(finalize_estimator_internal,gain_capture)
+S3method(finalize_estimator_internal,gain_curve)
+S3method(finalize_estimator_internal,kap)
+S3method(finalize_estimator_internal,lift_curve)
+S3method(finalize_estimator_internal,mcc)
+S3method(finalize_estimator_internal,mn_log_loss)
+S3method(finalize_estimator_internal,pr_auc)
+S3method(finalize_estimator_internal,pr_curve)
+S3method(finalize_estimator_internal,roc_auc)
+S3method(finalize_estimator_internal,roc_curve)
 S3method(gain_capture,data.frame)
 S3method(gain_curve,data.frame)
 S3method(huber_loss,data.frame)
