implement metric constructor
This doesn't actually function independently as a commit, as I've linked out to the metrics made with this function in docs, but is otherwise able to stand on its own.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ export(dots_to_estimate)
 export(dynamic_survival_metric_summarizer)
 export(f_meas)
 export(f_meas_vec)
+export(fairness_metric)
 export(finalize_estimator)
 export(finalize_estimator_internal)
 export(gain_capture)
