implement 3 canonical fairness metrics
`demographic_parity()`, `equalized_odds()`, and `equal_opportunity()` are all special cases of `fairness_metrics()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,10 +130,13 @@ export(concordance_survival_vec)
 export(conf_mat)
 export(curve_metric_summarizer)
 export(curve_survival_metric_summarizer)
+export(demographic_parity)
 export(detection_prevalence)
 export(detection_prevalence_vec)
 export(dots_to_estimate)
 export(dynamic_survival_metric_summarizer)
+export(equal_opportunity)
+export(equalized_odds)
 export(f_meas)
 export(f_meas_vec)
 export(fairness_metric)
