rename `fairness_metric()` -> `new_groupwise_metric()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,7 +139,6 @@ export(equal_opportunity)
 export(equalized_odds)
 export(f_meas)
 export(f_meas_vec)
-export(fairness_metric)
 export(finalize_estimator)
 export(finalize_estimator_internal)
 export(gain_capture)
@@ -178,6 +177,7 @@ export(msd)
 export(msd_vec)
 export(new_class_metric)
 export(new_dynamic_survival_metric)
+export(new_groupwise_metric)
 export(new_integrated_survival_metric)
 export(new_numeric_metric)
 export(new_prob_metric)
