add a metric print method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ S3method(precision,data.frame)
 S3method(precision,matrix)
 S3method(precision,table)
 S3method(print,conf_mat)
+S3method(print,metric)
 S3method(print,metric_set)
 S3method(recall,data.frame)
 S3method(recall,matrix)
