right-justify metric descriptions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ S3method(finalize_estimator_internal,pr_auc)
 S3method(finalize_estimator_internal,pr_curve)
 S3method(finalize_estimator_internal,roc_auc)
 S3method(finalize_estimator_internal,roc_curve)
+S3method(format,metric)
+S3method(format,metric_set)
 S3method(gain_capture,data.frame)
 S3method(gain_curve,data.frame)
 S3method(huber_loss,data.frame)
