add metric factory print method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ S3method(finalize_estimator_internal,pr_curve)
 S3method(finalize_estimator_internal,roc_auc)
 S3method(finalize_estimator_internal,roc_curve)
 S3method(format,metric)
+S3method(format,metric_factory)
 S3method(format,metric_set)
 S3method(gain_capture,data.frame)
 S3method(gain_curve,data.frame)
@@ -76,6 +77,7 @@ S3method(precision,matrix)
 S3method(precision,table)
 S3method(print,conf_mat)
 S3method(print,metric)
+S3method(print,metric_factory)
 S3method(print,metric_set)
 S3method(recall,data.frame)
 S3method(recall,matrix)
