--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -75,6 +75,20 @@ reference:
     - equalized_odds
     - equal_opportunity
 
+  - title: Dynamic Survival Metrics
+    contents:
+    - brier_survival
+    - brier_survival_integrated
+    - roc_auc_survival
+
+  - title: Static Survival Metrics
+    contents:
+    - concordance_survival
+
+  - title: Curve Survival Functions
+    contents:
+    - roc_curve_survival
+
   - title: Curve Functions
     contents:
     - roc_curve
