source standalone file first

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,3 +49,77 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Collate: 
+    'aaa-metrics.R'
+    'import-standalone-types-check.R'
+    'aaa-new.R'
+    'aaa.R'
+    'check-metric.R'
+    'class-accuracy.R'
+    'class-bal_accuracy.R'
+    'class-detection_prevalence.R'
+    'class-f_meas.R'
+    'class-j_index.R'
+    'class-kap.R'
+    'class-mcc.R'
+    'class-npv.R'
+    'class-ppv.R'
+    'class-precision.R'
+    'class-recall.R'
+    'class-sens.R'
+    'class-spec.R'
+    'conf_mat.R'
+    'data.R'
+    'deprecated-prob_helpers.R'
+    'deprecated-template.R'
+    'estimator-helpers.R'
+    'event-level.R'
+    'fair-aaa.R'
+    'fair-demographic_parity.R'
+    'fair-equal_opportunity.R'
+    'fair-equalized_odds.R'
+    'import-standalone-obj-type.R'
+    'import-standalone-survival.R'
+    'metric-tweak.R'
+    'misc.R'
+    'missings.R'
+    'num-ccc.R'
+    'num-huber_loss.R'
+    'num-iic.R'
+    'num-mae.R'
+    'num-mape.R'
+    'num-mase.R'
+    'num-mpe.R'
+    'num-msd.R'
+    'num-poisson_log_loss.R'
+    'num-pseudo_huber_loss.R'
+    'num-rmse.R'
+    'num-rpd.R'
+    'num-rpiq.R'
+    'num-rsq.R'
+    'num-rsq_trad.R'
+    'num-smape.R'
+    'prob-average_precision.R'
+    'prob-binary-thresholds.R'
+    'prob-brier_class.R'
+    'prob-classification_cost.R'
+    'prob-gain_capture.R'
+    'prob-gain_curve.R'
+    'prob-helpers.R'
+    'prob-lift_curve.R'
+    'prob-mn_log_loss.R'
+    'prob-pr_auc.R'
+    'prob-pr_curve.R'
+    'prob-roc_auc.R'
+    'prob-roc_aunp.R'
+    'prob-roc_aunu.R'
+    'prob-roc_curve.R'
+    'reexports.R'
+    'surv-brier_survival.R'
+    'surv-brier_survival_integrated.R'
+    'surv-concordance_survival.R'
+    'surv-roc_auc_survival.R'
+    'surv-roc_curve_survival.R'
+    'template.R'
+    'validation.R'
+    'yardstick-package.R'
