--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(finalize_estimator_internal,mcc)
 S3method(finalize_estimator_internal,mn_log_loss)
 S3method(finalize_estimator_internal,pr_auc)
 S3method(finalize_estimator_internal,pr_curve)
+S3method(finalize_estimator_internal,ranked_prob_score)
 S3method(finalize_estimator_internal,roc_auc)
 S3method(finalize_estimator_internal,roc_curve)
 S3method(format,metric)
@@ -79,6 +80,7 @@ S3method(print,conf_mat)
 S3method(print,metric)
 S3method(print,metric_factory)
 S3method(print,metric_set)
+S3method(ranked_prob_score,data.frame)
 S3method(recall,data.frame)
 S3method(recall,matrix)
 S3method(recall,table)
@@ -200,6 +202,8 @@ export(pr_curve)
 export(precision)
 export(precision_vec)
 export(prob_metric_summarizer)
+export(ranked_prob_score)
+export(ranked_prob_score_vec)
 export(recall)
 export(recall_vec)
 export(rmse)
