add missing exports of S3 methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,10 @@ S3method(average_precision,data.frame)
 S3method(bal_accuracy,data.frame)
 S3method(bal_accuracy,matrix)
 S3method(bal_accuracy,table)
+S3method(binary_checks,default)
+S3method(binary_checks,factor)
+S3method(binary_checks,matrix)
+S3method(binary_checks,numeric)
 S3method(brier_class,data.frame)
 S3method(brier_survival,data.frame)
 S3method(brier_survival_integrated,data.frame)
@@ -24,6 +28,12 @@ S3method(detection_prevalence,table)
 S3method(f_meas,data.frame)
 S3method(f_meas,matrix)
 S3method(f_meas,table)
+S3method(finalize_estimator_default,Surv)
+S3method(finalize_estimator_default,default)
+S3method(finalize_estimator_default,factor)
+S3method(finalize_estimator_default,matrix)
+S3method(finalize_estimator_default,numeric)
+S3method(finalize_estimator_default,table)
 S3method(finalize_estimator_internal,accuracy)
 S3method(finalize_estimator_internal,brier_class)
 S3method(finalize_estimator_internal,classification_cost)
@@ -46,6 +56,9 @@ S3method(gain_curve,data.frame)
 S3method(huber_loss,data.frame)
 S3method(huber_loss_pseudo,data.frame)
 S3method(iic,data.frame)
+S3method(is_multiclass,default)
+S3method(is_multiclass,factor)
+S3method(is_multiclass,table)
 S3method(j_index,data.frame)
 S3method(j_index,matrix)
 S3method(j_index,table)
@@ -63,6 +76,10 @@ S3method(metrics,data.frame)
 S3method(mn_log_loss,data.frame)
 S3method(mpe,data.frame)
 S3method(msd,data.frame)
+S3method(multiclass_checks,default)
+S3method(multiclass_checks,factor)
+S3method(multiclass_checks,matrix)
+S3method(multiclass_checks,numeric)
 S3method(npv,data.frame)
 S3method(npv,matrix)
 S3method(npv,table)
@@ -108,6 +125,9 @@ S3method(specificity,matrix)
 S3method(specificity,table)
 S3method(summary,conf_mat)
 S3method(tidy,conf_mat)
+S3method(validate_truth_estimate_types,default)
+S3method(validate_truth_estimate_types,factor)
+S3method(validate_truth_estimate_types,numeric)
 export(accuracy)
 export(accuracy_vec)
 export(average_precision)
