--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ export(ccc_vec)
 export(check_class_metric)
 export(check_dynamic_survival_metric)
 export(check_numeric_metric)
+export(check_ordered_prob_metric)
 export(check_prob_metric)
 export(check_static_survival_metric)
 export(class_metric_summarizer)
@@ -205,11 +206,13 @@ export(new_dynamic_survival_metric)
 export(new_groupwise_metric)
 export(new_integrated_survival_metric)
 export(new_numeric_metric)
+export(new_ordered_prob_metric)
 export(new_prob_metric)
 export(new_static_survival_metric)
 export(npv)
 export(npv_vec)
 export(numeric_metric_summarizer)
+export(ordered_prob_metric_summarizer)
 export(poisson_log_loss)
 export(poisson_log_loss_vec)
 export(ppv)
