switch ranged_prob_score() to use ordered_prob interface

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -99,6 +99,7 @@ Collate:
     'num-rsq.R'
     'num-rsq_trad.R'
     'num-smape.R'
+    'orderedprob-ranked_prob_score.R'
     'prob-average_precision.R'
     'prob-binary-thresholds.R'
     'prob-brier_class.R'
@@ -110,7 +111,6 @@ Collate:
     'prob-mn_log_loss.R'
     'prob-pr_auc.R'
     'prob-pr_curve.R'
-    'prob-ranked_prob_score.R'
     'prob-roc_auc.R'
     'prob-roc_aunp.R'
     'prob-roc_aunu.R'
