--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -48,6 +48,9 @@ reference:
     - mn_log_loss
     - classification_cost
     - brier_class
+
+  - title: Ordered Probability Metrics
+    contents:
     - ranked_prob_score
 
   - title: Regression Metrics
