--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,7 @@ export(ccc)
 export(ccc_vec)
 export(check_class_metric)
 export(check_dynamic_survival_metric)
+export(check_linear_pred_survival_metric)
 export(check_numeric_metric)
 export(check_ordered_prob_metric)
 export(check_prob_metric)
@@ -184,6 +185,7 @@ export(j_index_vec)
 export(kap)
 export(kap_vec)
 export(lift_curve)
+export(linear_pred_survival_metric_summarizer)
 export(mae)
 export(mae_vec)
 export(mape)
@@ -207,6 +209,7 @@ export(new_class_metric)
 export(new_dynamic_survival_metric)
 export(new_groupwise_metric)
 export(new_integrated_survival_metric)
+export(new_linear_pred_survival_metric)
 export(new_numeric_metric)
 export(new_ordered_prob_metric)
 export(new_prob_metric)
