--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ S3method(specificity,matrix)
 S3method(specificity,table)
 S3method(summary,conf_mat)
 S3method(tidy,conf_mat)
+S3method(two_class_stats_survival,data.frame)
 S3method(validate_truth_estimate_types,default)
 S3method(validate_truth_estimate_types,factor)
 S3method(validate_truth_estimate_types,numeric)
@@ -261,6 +262,8 @@ export(specificity)
 export(specificity_vec)
 export(static_survival_metric_summarizer)
 export(tidy)
+export(two_class_stats_survival)
+export(two_class_stats_survival_vec)
 export(validate_estimator)
 export(yardstick_any_missing)
 export(yardstick_remove_missing)
