--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,7 @@ export(check_dynamic_survival_metric)
 export(check_numeric_metric)
 export(check_ordered_prob_metric)
 export(check_prob_metric)
+export(check_quantile_metric)
 export(check_static_survival_metric)
 export(class_metric_summarizer)
 export(classification_cost)
@@ -262,6 +263,8 @@ export(specificity_vec)
 export(static_survival_metric_summarizer)
 export(tidy)
 export(validate_estimator)
+export(wis)
+export(wis_vec)
 export(yardstick_any_missing)
 export(yardstick_remove_missing)
 import(rlang)
